- fixed functionality to vote on words
- VoteButton component took too long and made me create shit i did non need and i dont have time

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -151,3 +151,16 @@
 .rejected {
   @apply text-red-700;
 }
+
+/* ----- USER VOTES ----- */
+.upVote {
+  @apply text-green-400;
+}
+
+.downVote {
+  @apply text-red-400;
+}
+
+.reset {
+  @apply text-slate-500;
+}
